==> skullboyers/touchgfx_stm32f429_iios/Device/flash/bsp_spi_flash.c <==
#include ".\flash\bsp_spi_flash.h"
#include <string.h>
#define W25Q_SPI_CS_Pin GPIO_PIN_6
#define W25Q_SPI_CS_GPIO_Port GPIOF

void SPI_FLASH_Init(void)
{
//    uint8_t checkBuffer[] = {0x1A, 0x2B, 0x5E, 0x9F};
    
    MX_SPI5_Init();    
    SPI_Flash_WAKEUP();
    manufactId = SPI_FLASH_ReadManufactDeviceID();
    deviceId = SPI_FLASH_ReadDeviceID();
    flashId = SPI_FLASH_ReadID();
//    SPI_FLASH_SectorErase(0x0);
////    SPI_FLASH_PageWrite(checkBuffer, 0x0, sizeof(checkBuffer));
//    SPI_FLASH_BufferWrite(checkBuffer, 0x0, sizeof(checkBuffer));
//    memset(checkBuffer, 0, sizeof(checkBuffer));
//    SPI_FLASH_BufferRead(checkBuffer, 0x0, sizeof(checkBuffer));
    SPI_FLASH_BufferRead(readData, 0x0, sizeof(readData));
}

void SPI_FLASH_SectorErase(uint32_t SectorAddr)
{
    uint8_t txData[4];
    
    txData[0] = W25X_SectorErase;
    txData[1] = (SectorAddr & 0xFF0000) >> 16;
    txData[2] = (SectorAddr & 0xFF00) >> 8;
    txData[3] = SectorAddr & 0xFF;

    SPI_FLASH_WriteEnable();
    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_RESET);

//     HAL_SPI_Transmit(&hspi5, txData, sizeof(txData), 1000000);
     HAL_SPI_TransmitReceive(&hspi5, txData, NULL, sizeof(txData), 1000000);

    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_SET);

    SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_BulkErase(void)
{
    /* 发送FLASH写使能命令 */
    SPI_FLASH_WriteEnable();
    
    /* 整块 Erase */
    /* 选择FLASH: CS低电平 */
    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_RESET);
    /* 发送整块擦除指令*/
    SPI_FLASH_SendByte(W25X_ChipErase);
    /* 停止信号 FLASH: CS 高电平 */
    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_SET);
    
    /* 等待擦除完毕*/
    SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_PageWrite(uint8_t* pBuffer, uint32_t WriteAddr, uint16_t NumByteToWrite)
{
    uint8_t txData[4];
 
    txData[0] = W25X_PageProgram;
    txData[1] = (WriteAddr & 0xFF0000) >> 16;
    txData[2] = (WriteAddr & 0xFF00) >> 8;
    txData[3] = WriteAddr & 0xFF;
    
    /* 发送FLASH写使能命令 */
    SPI_FLASH_WriteEnable();
    
    /* 选择FLASH: CS低电平 */
    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_RESET);
//    /* 写页写指令*/
//    SPI_FLASH_SendByte(W25X_PageProgram);
//    /*发送写地址的高位*/
//    SPI_FLASH_SendByte((WriteAddr & 0xFF0000) >> 16);
//    /*发送写地址的中位*/
//    SPI_FLASH_SendByte((WriteAddr & 0xFF00) >> 8);
//    /*发送写地址数据传输的低位*/
//    SPI_FLASH_SendByte(WriteAddr & 0xFF);
    
    HAL_SPI_Transmit(&hspi5, txData, sizeof(txData), 100);
    
    if (NumByteToWrite > SPI_FLASH_PerWritePageSize) {
        NumByteToWrite = SPI_FLASH_PerWritePageSize;
//        FLASH_ERROR("SPI_FLASH_PageWrite too large!");
    }
    
//    /* 写入数据*/
//    while (NumByteToWrite--)
//    {
//        /* 发送当前要写入的字节数据 */
//        SPI_FLASH_SendByte(*pBuffer);
//        /* 指向下一字节数据 */
//        pBuffer++;
//    }
    
    HAL_SPI_Transmit(&hspi5, pBuffer, NumByteToWrite, 100);
    
    /* 停止信号 FLASH: CS 高电平 */
    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_SET);
    
    /* 等待写入完毕*/
    SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_BufferRead(uint8_t* pBuffer, uint32_t ReadAddr, uint16_t NumByteToRead)
{
    uint8_t txData[4];

    txData[0] = W25X_ReadData;
    txData[1] = (ReadAddr & 0xFF0000) >> 16;
    txData[2] = (ReadAddr & 0xFF00) >> 8;
    txData[3] = ReadAddr & 0xFF;
    
    /* 选择FLASH: CS低电平 */
    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_RESET);
    
//    /* 发送 读 指令 */
//    SPI_FLASH_SendByte(W25X_ReadData);
//    
//    /* 发送 读 地址高位 */
//    SPI_FLASH_SendByte((ReadAddr & 0xFF0000) >> 16);
//    /* 发送 读 地址中位 */
//    SPI_FLASH_SendByte((ReadAddr& 0xFF00) >> 8);
//    /* 发送 读 地址低位 */
//    SPI_FLASH_SendByte(ReadAddr & 0xFF);
    
    HAL_SPI_Transmit(&hspi5, txData, sizeof(txData), 100);
    
//    /* 读取数据 */
//    while (NumByteToRead--) {
//        /* 读取一个字节*/
//        *pBuffer = SPI_FLASH_SendByte(Dummy_Byte);
//        /* 指向下一个字节缓冲区 */
//        pBuffer++;
//    }
//    uint8_t* txDummy = ( uint8_t* )pvPortMalloc(NumByteToRead);
//    memset(txDummy, Dummy_Byte, NumByteToRead);
//    HAL_SPI_TransmitReceive(&hspi5, txDummy, pBuffer, NumByteToRead, 100);
//    vPortFree(txDummy);
    HAL_SPI_Receive(&hspi5, pBuffer, NumByteToRead, 100);
    
    /* 停止信号 FLASH: CS 高电平 */
    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_SET);
}

uint32_t SPI_FLASH_ReadID(void)
{
    uint32_t retVal;
    uint8_t txData[] = {W25X_JedecDeviceID};
    uint8_t rxData[4] = {0};
    
    /* 开始通讯：CS低电平 */
    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_RESET);
    
    /* rxData[0]:存放发送地址时读回的数据 */
#if 1
    HAL_SPI_TransmitReceive(&hspi5, txData, rxData, sizeof(rxData), 1000);
    retVal = rxData[1]<<16 | rxData[2]<<8 | rxData[3];
#else
    HAL_SPI_Transmit(&hspi5, txData, sizeof(txData), 1000);
    HAL_SPI_Receive(&hspi5, rxData, sizeof(rxData) - 1, 1000);
    retVal = rxData[0]<<16 | rxData[1]<<8 | rxData[2];
#endif
    /* 停止通讯：CS高电平 */
    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_SET);

    return retVal;
}

uint32_t SPI_FLASH_ReadDeviceID(void)
{
    uint32_t retVal = 0;
    uint8_t txData[] = {W25X_DeviceID};
    uint8_t rxData[5] = {0};
    
    /* Select the FLASH: Chip Select low */
    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_RESET);
    /* rxData[0]:存放发送地址时读回的数据 */
    HAL_SPI_TransmitReceive(&hspi5, txData, rxData, sizeof(rxData), 1000);
    retVal = rxData[4];
    
    /* Deselect the FLASH: Chip Select high */
    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_SET);
    
    return retVal;
}

uint8_t SPI_FLASH_SendByte(uint8_t byte)
{
    uint8_t retval;
    
    HAL_SPI_Transmit(&hspi5, &byte, sizeof(byte), 100);
    HAL_SPI_Receive(&hspi5, &retval, sizeof(retval), 100);
    return retval;
}

uint16_t SPI_FLASH_SendHalfWord(uint16_t HalfWord)
{
  SPITimeout = SPIT_FLAG_TIMEOUT;

  /* Loop while DR register in not emplty */
  while (!(HAL_SPI_GetState(&hspi5) == HAL_SPI_STATE_READY))
  {
    if((SPITimeout--) == 0) return SPI_TIMEOUT_UserCallback(2);
   }

  /* Send Half Word through the FLASH_SPI peripheral */
   HAL_SPI_Transmit(&hspi5, (uint8_t* )&HalfWord, sizeof(HalfWord), 10);

  SPITimeout = SPIT_FLAG_TIMEOUT;

  /* Wait to receive a Half Word */
  while (!(HAL_SPI_GetState(&hspi5) == HAL_SPI_STATE_READY))
   {
    if((SPITimeout--) == 0) return SPI_TIMEOUT_UserCallback(3);
   }
  /* Return the Half Word read from the SPI bus */
   uint16_t retval;
   HAL_SPI_Receive(&hspi5, (uint8_t* )&retval, sizeof(retval), 10);
  return retval;
}

void SPI_FLASH_WriteEnable(void)
{
    uint8_t txData[] = {W25X_WriteEnable};
    /* 通讯开始：CS低 */
    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_RESET);
    
    /* 发送写使能命令*/
//    SPI_FLASH_SendByte(W25X_WriteEnable);
    HAL_SPI_Transmit(&hspi5, txData, sizeof(txData), 1000);
    
    /*通讯结束：CS高 */
    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_SET);
}

void SPI_FLASH_WaitForWriteEnd(void)
{
  uint8_t FLASH_Status = 0;
    uint8_t txData[] = {W25X_ReadStatusReg};

  /* 选择 FLASH: CS 低 */
    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_RESET);

  /* 发送 读状态寄存器 命令 */
//  SPI_FLASH_SendByte(W25X_ReadStatusReg);
    HAL_SPI_Transmit(&hspi5, txData, sizeof(txData), 1000);

  SPITimeout = SPIT_FLAG_TIMEOUT;
  /* 若FLASH忙碌，则等待 */
  do
  {
    /* 读取FLASH芯片的状态寄存器 */
//    FLASH_Status = SPI_FLASH_SendByte(Dummy_Byte);	 
    HAL_SPI_Receive(&hspi5, &FLASH_Status, sizeof(FLASH_Status), 1000);
    {
      if((SPITimeout--) == 0) 
      {
        SPI_TIMEOUT_UserCallback(4);
        return;
      }
    } 
  }
  while ((FLASH_Status & WIP_Flag) == SET); /* 正在写入标志 */

  /* 停止信号  FLASH: CS 高 */
    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_SET);
}

void SPI_Flash_PowerDown(void)   
{
    uint8_t txData[] = {W25X_PowerDown};
  /* 选择 FLASH: CS 低 */
    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_RESET);

  /* 发送 掉电 命令 */
//  SPI_FLASH_SendByte(W25X_PowerDown);
    HAL_SPI_Transmit(&hspi5, txData, sizeof(txData), 1000);

  /* 停止信号  FLASH: CS 高 */
    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_SET);
}

void SPI_Flash_WAKEUP(void)   
{
    uint8_t txData[] = {W25X_ReleasePowerDown};
  /*选择 FLASH: CS 低 */
    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_RESET);

  /* 发上 上电 命令 */
//  SPI_FLASH_SendByte(W25X_ReleasePowerDown);
    HAL_SPI_Transmit(&hspi5, txData, sizeof(txData), 1000);

  /* 停止信号 FLASH: CS 高 */
    HAL_GPIO_WritePin(W25Q_SPI_CS_GPIO_Port, W25Q_SPI_CS_Pin, GPIO_PIN_SET); // 等待TRES1
}
