==> EmGaGa/N32L43X/n32l43x_example/peripheral/spi_flash/src/bsp_spi_flash.c <==
#include "bsp_spi_flash.h"

void SPI_FLASH_Init(void)
{
    GPIO_InitType GPIO_InitStructure;
    SPI_InitType SPI_InitStructure;

    /* Enable the GPIO Clock */
    RCC_EnableAPB2PeriphClk(SPI_FLASH_GPIO_PERIPH|RCC_APB2_PERIPH_AFIO, ENABLE);
    /*!< SPI1 Periph clock enable */
    RCC_EnableAPB2PeriphClk(SPI_FLASH_RCC_PERIPH, ENABLE);

    /* Configure the GPIO pin */
    GPIO_InitStruct(&GPIO_InitStructure);
    GPIO_InitStructure.Pin        = SPI_FLASH_CS_PIN;
    GPIO_InitStructure.GPIO_Current = GPIO_DC_4mA;
    GPIO_InitStructure.GPIO_Pull    = GPIO_Pull_Up;
    GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_Out_PP;
    GPIO_InitPeripheral(SPI_FLASH_CS_PORT, &GPIO_InitStructure);

  	/*!< Configure SPI1 pins: SCK */
    GPIO_InitStructure.Pin        = SPI_FLASH_SCK_PIN;
    GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_AF_PP;
    GPIO_InitStructure.GPIO_Alternate = GPIO_AF0_SPI1;
    GPIO_InitPeripheral(SPI_FLASH_SCK_PORT, &GPIO_InitStructure);

    /*!< Configure SPI1 pins: MOSI */
    GPIO_InitStructure.Pin = SPI_FLASH_MOSI_PIN;
    GPIO_InitPeripheral(SPI_FLASH_MOSI_PORT, &GPIO_InitStructure);

    /*!< Configure SPI1 pins: MISO */
    GPIO_InitStructure.Pin = SPI_FLASH_MISO_PIN;
    GPIO_InitPeripheral(SPI_FLASH_MISO_PORT, &GPIO_InitStructure);

    /* 停止信号 FLASH: CS引脚高电平*/
    SPI_FLASH_CS_HIGH();

    /*!< SPI configuration */
    SPI_InitStructure.DataDirection = SPI_DIR_DOUBLELINE_FULLDUPLEX;
    SPI_InitStructure.SpiMode       = SPI_MODE_MASTER;
    SPI_InitStructure.DataLen       = SPI_DATA_SIZE_8BITS;
    SPI_InitStructure.CLKPOL        = SPI_CLKPOL_HIGH;
    SPI_InitStructure.CLKPHA        = SPI_CLKPHA_SECOND_EDGE;
    SPI_InitStructure.NSS           = SPI_NSS_SOFT;

    SPI_InitStructure.BaudRatePres = SPI_BR_PRESCALER_2;

    SPI_InitStructure.FirstBit = SPI_FB_MSB;
    SPI_InitStructure.CRCPoly  = 7;
    SPI_Init(SPI_FLASH_PERIPH, &SPI_InitStructure);

    /*!< Enable the SPI_PERIPH  */
    SPI_Enable(SPI_FLASH_PERIPH, ENABLE);
}

void SPI_FLASH_SectorErase(uint32_t SectorAddr)
{
	/* 发送FLASH写使能命令 */
	SPI_FLASH_WriteEnable();
	SPI_FLASH_WaitForWriteEnd();
	/* 擦除扇区 */
	/* 选择FLASH: CS低电平 */
	SPI_FLASH_CS_LOW();
	/* 发送扇区擦除指令*/
	SPI_FLASH_SendByte(W25X_SectorErase);
	/*发送擦除扇区地址的高位*/
	SPI_FLASH_SendByte((SectorAddr & 0xFF0000) >> 16);
	/* 发送擦除扇区地址的中位 */
	SPI_FLASH_SendByte((SectorAddr & 0xFF00) >> 8);
	/* 发送擦除扇区地址的低位 */
	SPI_FLASH_SendByte(SectorAddr & 0xFF);
	/* 停止信号 FLASH: CS 高电平 */
	SPI_FLASH_CS_HIGH();
	/* 等待擦除完毕*/
	SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_BulkErase(void)
{
	/* 发送FLASH写使能命令 */
	SPI_FLASH_WriteEnable();

	/* 整块 Erase */
	/* 选择FLASH: CS低电平 */
	SPI_FLASH_CS_LOW();
	/* 发送整块擦除指令*/
	SPI_FLASH_SendByte(W25X_ChipErase);
	/* 停止信号 FLASH: CS 高电平 */
	SPI_FLASH_CS_HIGH();

	/* 等待擦除完毕*/
	SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_PageWrite(uint8_t* pBuffer, uint32_t WriteAddr, uint16_t NumByteToWrite)
{
	/* 发送FLASH写使能命令 */
	SPI_FLASH_WriteEnable();

	/* 选择FLASH: CS低电平 */
	SPI_FLASH_CS_LOW();
	/* 写页写指令*/
	SPI_FLASH_SendByte(W25X_PageProgram);
	/*发送写地址的高位*/
	SPI_FLASH_SendByte((WriteAddr & 0xFF0000) >> 16);
	/*发送写地址的中位*/
	SPI_FLASH_SendByte((WriteAddr & 0xFF00) >> 8);
	/*发送写地址的低位*/
	SPI_FLASH_SendByte(WriteAddr & 0xFF);

	if(NumByteToWrite > SPI_FLASH_PerWritePageSize)
	{
		NumByteToWrite = SPI_FLASH_PerWritePageSize;
		FLASH_ERROR("SPI_FLASH_PageWrite too large!"); 
	}

	/* 写入数据*/
	while (NumByteToWrite--)
	{
		/* 发送当前要写入的字节数据 */
		SPI_FLASH_SendByte(*pBuffer);
		/* 指向下一字节数据 */
		pBuffer++;
	}

	/* 停止信号 FLASH: CS 高电平 */
	SPI_FLASH_CS_HIGH();

	/* 等待写入完毕*/
	SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_BufferRead(uint8_t* pBuffer, uint32_t ReadAddr, uint16_t NumByteToRead)
{
	/* 选择FLASH: CS低电平 */
	SPI_FLASH_CS_LOW();

	/* 发送 读 指令 */
	SPI_FLASH_SendByte(W25X_ReadData);

	/* 发送 读 地址高位 */
	SPI_FLASH_SendByte((ReadAddr & 0xFF0000) >> 16);
	/* 发送 读 地址中位 */
	SPI_FLASH_SendByte((ReadAddr& 0xFF00) >> 8);
	/* 发送 读 地址低位 */
	SPI_FLASH_SendByte(ReadAddr & 0xFF);

	/* 读取数据 */
	while (NumByteToRead--) /* while there is data to be read */
	{
		/* 读取一个字节*/
		*pBuffer = SPI_FLASH_SendByte(Dummy_Byte);
		/* 指向下一个字节缓冲区 */
		pBuffer++;
	}

	/* 停止信号 FLASH: CS 高电平 */
	SPI_FLASH_CS_HIGH();
}

uint32_t SPI_FLASH_ReadID(void)
{
	uint32_t Temp = 0, Temp0 = 0, Temp1 = 0, Temp2 = 0;

	/* 开始通讯：CS低电平 */
	SPI_FLASH_CS_LOW();

	/* 发送JEDEC指令，读取ID */
	SPI_FLASH_SendByte(W25X_JedecDeviceID);

	/* 读取一个字节数据 */
	Temp0 = SPI_FLASH_SendByte(Dummy_Byte);

	/* 读取一个字节数据 */
	Temp1 = SPI_FLASH_SendByte(Dummy_Byte);

	/* 读取一个字节数据 */
	Temp2 = SPI_FLASH_SendByte(Dummy_Byte);

	/* 停止通讯：CS高电平 */
	SPI_FLASH_CS_HIGH();

	/*把数据组合起来，作为函数的返回值*/
	Temp = (Temp0 << 16) | (Temp1 << 8) | Temp2;

	return Temp;
}

uint32_t SPI_FLASH_ReadDeviceID(void)
{
	uint32_t Temp = 0;

	/* Select the FLASH: Chip Select low */
	SPI_FLASH_CS_LOW();

	/* Send "RDID " instruction */
	SPI_FLASH_SendByte(W25X_DeviceID);
	SPI_FLASH_SendByte(Dummy_Byte);
	SPI_FLASH_SendByte(Dummy_Byte);
	SPI_FLASH_SendByte(Dummy_Byte);

	/* Read a byte from the FLASH */
	Temp = SPI_FLASH_SendByte(Dummy_Byte);

	/* Deselect the FLASH: Chip Select high */
	SPI_FLASH_CS_HIGH();

	return Temp;
}

uint8_t SPI_FLASH_SendByte(uint8_t byte)
{
	SPITimeout = SPIT_FLAG_TIMEOUT;
	/* 等待发送缓冲区为空，TXE事件 */
	while (SPI_I2S_GetStatus(SPI_FLASH_PERIPH, SPI_I2S_TE_FLAG) == RESET)
	{
		if((SPITimeout--) == 0) return SPI_TIMEOUT_UserCallback(0);
	}

	/* 写入数据寄存器，把要写入的数据写入发送缓冲区 */
	SPI_I2S_TransmitData(SPI_FLASH_PERIPH, byte);

	SPITimeout = SPIT_FLAG_TIMEOUT;
	/* 等待接收缓冲区非空，RXNE事件 */
	while (SPI_I2S_GetStatus(SPI_FLASH_PERIPH, SPI_I2S_RNE_FLAG) == RESET)
	{
		if((SPITimeout--) == 0) return SPI_TIMEOUT_UserCallback(1);
	}

	/* 读取数据寄存器，获取接收缓冲区数据 */
	return SPI_I2S_ReceiveData(SPI_FLASH_PERIPH);
}

uint16_t SPI_FLASH_SendHalfWord(uint16_t HalfWord)
{
	SPITimeout = SPIT_FLAG_TIMEOUT;
	/* 等待发送缓冲区为空，TXE事件 */
	while (SPI_I2S_GetStatus(SPI_FLASH_PERIPH, SPI_I2S_TE_FLAG) == RESET)
	{
		if((SPITimeout--) == 0) return SPI_TIMEOUT_UserCallback(2);
	}

	/* 写入数据寄存器，把要写入的数据写入发送缓冲区 */
	SPI_I2S_TransmitData(SPI_FLASH_PERIPH, HalfWord);

	SPITimeout = SPIT_FLAG_TIMEOUT;
	/* 等待接收缓冲区非空，RXNE事件 */
	while (SPI_I2S_GetStatus(SPI_FLASH_PERIPH, SPI_I2S_RNE_FLAG) == RESET)
	{
		if((SPITimeout--) == 0) return SPI_TIMEOUT_UserCallback(3);
	}
	/* 读取数据寄存器，获取接收缓冲区数据 */
	return SPI_I2S_ReceiveData(SPI_FLASH_PERIPH);
}

void SPI_FLASH_WriteEnable(void)
{
    /* 通讯开始：CS低 */
    SPI_FLASH_CS_LOW();

    /* 发送写使能命令*/
    SPI_FLASH_SendByte(W25X_WriteEnable);

    /*通讯结束：CS高 */
    SPI_FLASH_CS_HIGH();
}

void SPI_FLASH_WaitForWriteEnd(void)
{
	uint8_t FLASH_Status = 0;

	/* 选择 FLASH: CS 低 */
	SPI_FLASH_CS_LOW();

	/* 发送 读状态寄存器 命令 */
	SPI_FLASH_SendByte(W25X_ReadStatusReg);

	/* 若FLASH忙碌，则等待 */
	do
	{
		/* 读取FLASH芯片的状态寄存器 */
		FLASH_Status = SPI_FLASH_SendByte(Dummy_Byte);	 
	}
	while ((FLASH_Status & WIP_Flag) == SET);  /* 正在写入标志 */

	/* 停止信号  FLASH: CS 高 */
	SPI_FLASH_CS_HIGH();
}

void SPI_Flash_PowerDown(void)   
{ 
    /* 通讯开始：CS低 */
    SPI_FLASH_CS_LOW();

    /* 发送 掉电 命令 */
    SPI_FLASH_SendByte(W25X_PowerDown);

    /*通讯结束：CS高 */
    SPI_FLASH_CS_HIGH();
}

void SPI_Flash_WAKEUP(void)   
{
    /*选择 FLASH: CS 低 */
    SPI_FLASH_CS_LOW();

    /* 发送 上电 命令 */
    SPI_FLASH_SendByte(W25X_ReleasePowerDown);

    /* 停止信号 FLASH: CS 高 */
    SPI_FLASH_CS_HIGH();
}
